--- a/Pannel/scorepannel.ui
+++ b/Pannel/scorepannel.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>232</width>
-    <height>124</height>
+    <width>350</width>
+    <height>185</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,64 +16,130 @@
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
     <widget class="QLabel" name="label">
+     <property name="styleSheet">
+      <string notr="true">color: rgb(255, 255, 255);
+font: 18pt &quot;微软雅黑&quot;;</string>
+     </property>
+     <property name="lineWidth">
+      <number>1</number>
+     </property>
      <property name="text">
       <string>玩家1</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignmentFlag::AlignCenter</set>
      </property>
     </widget>
    </item>
    <item row="0" column="1">
     <widget class="QLabel" name="player1_score">
+     <property name="styleSheet">
+      <string notr="true">color: rgb(255, 255, 255);
+font: 18pt &quot;微软雅黑&quot;;</string>
+     </property>
      <property name="text">
       <string/>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignmentFlag::AlignCenter</set>
      </property>
     </widget>
    </item>
    <item row="0" column="2">
     <widget class="QLabel" name="label_9">
+     <property name="styleSheet">
+      <string notr="true">color: rgb(255, 255, 255);
+font: 18pt &quot;微软雅黑&quot;;</string>
+     </property>
      <property name="text">
       <string>分</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignmentFlag::AlignCenter</set>
      </property>
     </widget>
    </item>
    <item row="1" column="0">
     <widget class="QLabel" name="label_2">
+     <property name="styleSheet">
+      <string notr="true">color: rgb(255, 255, 255);
+font: 18pt &quot;微软雅黑&quot;;</string>
+     </property>
      <property name="text">
       <string>玩家2</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignmentFlag::AlignCenter</set>
      </property>
     </widget>
    </item>
    <item row="1" column="1">
     <widget class="QLabel" name="player2_score">
+     <property name="styleSheet">
+      <string notr="true">color: rgb(255, 255, 255);
+font: 18pt &quot;微软雅黑&quot;;</string>
+     </property>
      <property name="text">
       <string/>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignmentFlag::AlignCenter</set>
      </property>
     </widget>
    </item>
    <item row="1" column="2">
     <widget class="QLabel" name="label_7">
+     <property name="styleSheet">
+      <string notr="true">color: rgb(255, 255, 255);
+font: 18pt &quot;微软雅黑&quot;;</string>
+     </property>
      <property name="text">
       <string>分</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignmentFlag::AlignCenter</set>
      </property>
     </widget>
    </item>
    <item row="2" column="0">
     <widget class="QLabel" name="label_3">
+     <property name="styleSheet">
+      <string notr="true">color: rgb(255, 255, 255);
+font: 18pt &quot;微软雅黑&quot;;</string>
+     </property>
      <property name="text">
       <string>玩家3</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignmentFlag::AlignCenter</set>
      </property>
     </widget>
    </item>
    <item row="2" column="1">
     <widget class="QLabel" name="player3_score">
+     <property name="styleSheet">
+      <string notr="true">color: rgb(255, 255, 255);
+font: 18pt &quot;微软雅黑&quot;;</string>
+     </property>
      <property name="text">
       <string/>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignmentFlag::AlignCenter</set>
      </property>
     </widget>
    </item>
    <item row="2" column="2">
     <widget class="QLabel" name="label_8">
+     <property name="styleSheet">
+      <string notr="true">color: rgb(255, 255, 255);
+font: 18pt &quot;微软雅黑&quot;;</string>
+     </property>
      <property name="text">
       <string>分</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignmentFlag::AlignCenter</set>
      </property>
     </widget>
    </item>
